--- a/less/main.less
+++ b/less/main.less
@@ -1,13 +1,13 @@
 // =============
 // MAIN CSS FILE
 // =============
-// VERSION: 1.1
+// VERSION: 1.2
 // ============
 
 // Part of an effort to create a modular, lightweight CSS framework.
 
 /*
-Title: Chipped Beef
+Website Title: Chipped Beef
 Website CSS Version: 1.0
 Website URL:
 */
@@ -30,7 +30,6 @@ Website URL:
 
 // SELECTED MODULES
 // ================
-
 // If you don't want to use a certain feature, just comment it out. Hooray for lightweight stylesheets!
 
 
