--- a/less/buttons.less
+++ b/less/buttons.less
@@ -59,6 +59,15 @@ This file contains an assortment of buttons to get you started.
         background-color: darken(@success, 5%);
     }
 
+.button.white {
+    background: #fff;
+    color: @secondaryColor;
+}
+
+    .button.white:hover {
+        background: darken(#fff, 10%);
+    }
+
 /* Button helper classes */
 .button.full-width {
     display: block;
