--- a/less/type.less
+++ b/less/type.less
@@ -28,6 +28,7 @@ html {
 body {
     font-family: @bodyFontFamily;
     font-size: @baseFontSize;
+    font-weight: 300;
     line-height: @lineHeight;
 }
 
@@ -45,12 +46,14 @@ h1 {
 h2 {
     font-family: @headerFontFamily;
     font-size: round(@baseFontSize*@ratio*@ratio);
+    font-weight: 300;
     line-height: @lineHeight*3;
 }
 
 h3 {
     font-family: @headerFontFamily;
     font-size: round(@baseFontSize*@ratio);
+    font-weight: 300;
     line-height: @lineHeight*2;
 }
 
