--- a/less/main.less
+++ b/less/main.less
@@ -18,7 +18,7 @@ Website URL:
 
 @backgroundColor: 	#ffffff;
 @primaryTextColor: 	#333333;
-@secondaryColor: 	#f44040;
+@secondaryColor: 	#5fc59b;
 @muted:				#999999;
 @subtle:			#ececec;
 
