--- a/public/less/type.less
+++ b/public/less/type.less
@@ -1,14 +1,14 @@
-// ============
-// MODULAR TYPE
-// ============
-// VERSION: 1.0
-// ============
+/*
+============
+MODULAR TYPE
+============
+VERSION: 1.2
+============
 
-// Part of an effort to create a modular, lightweight CSS framework.
-
-// Type in the Chipped Beef framework is built to maintain a vertical rhythm. 
-// Of course, it's very hard to maintain that rhythm in complex websites, but the
-// default type settings should keep standard type in rhythm.
+Type in the Chipped Beef framework is built to maintain a vertical rhythm. 
+Of course, it's very hard to maintain that rhythm in complex websites, but the
+default type settings should keep standard type in rhythm.
+*/
 
 /* Base Typography */
 
@@ -80,5 +80,5 @@ KEEPING IT RESPONSIVE, YO
 
 /* Phones */
 @media only screen and (max-width: 480px) {
-    html { font-size: 45%;}
+    html { font-size: 50%;}
 }
