--- a/public/less/grid.less
+++ b/public/less/grid.less
@@ -1,16 +1,17 @@
-// ============
-// MODULAR GRID (From Bootstrap 3)
-// ============
-// VERSION: 2.0
-// ============
+/*
+============
+MODULAR GRID (From Bootstrap 3)
+============
+VERSION: 2.0
+============
 
-// * Bootstrap v3
-// *
-// * Copyright 2013 Twitter, Inc
-// * Licensed under the Apache License v2.0
-// * http://www.apache.org/licenses/LICENSE-2.0
-// *
-// * Designed and built with all the love in the world @twitter by @mdo and @fat.
+Bootstrap v3
+Copyright 2013 Twitter, Inc
+Licensed under the Apache License v2.0
+http://www.apache.org/licenses/LICENSE-2.0
+Designed and built with all the love in the world @twitter by @mdo and @fat.
+*/
+
 
 /* Grid system */
 .container {
